2001-06-16  Bruno Haible  <haible@clisp.cons.org>

	Back out unneeded 2001-04-06 patch.
	* makemake.in (NLS_INCLUDES): Set to empty if not using unicode.
	* encoding.d: When not UNICODE, don't include "nls_ascii.c" and don't
	define nls_ascii_table and nls_tables.
	* pseudofun.d: When not UNICODE, don't relocate nls_ascii_table.

2001-06-16  Bruno Haible  <haible@clisp.cons.org>

	Tweak 2001-03-27 patch.
	* eval.d (coerce_function): Mark unreachable code with NOTREACHED.
	(apply): Likewise.
	(funcall): Likewise.

2001-06-16  Bruno Haible  <haible@clisp.cons.org>

	* list.d (up2_test): Don't go through funcall() if the test function
	is #'eq, #'eql or #'equal.
	(up_test): Likewise.
	(funcall_key): New macro.
	(subst, nsubst, sublis, nsublis, member, ADJOIN, assoc, rassoc): Use
	it.

2001-06-23  Bruno Haible  <haible@clisp.cons.org>

	* aclocal.m4 (CL_GETPAGESIZE): Add check for sys/param.h. For mingw32.

2001-06-22  Sam Steingold  <sds@gnu.org>

	New debug command "Reset"(:re)
	to restore the i/o - *PACKAGE* and *READTABLE*
	* reploop.lisp (debug-reset-io): new function
	(*saved-debug-package*, *saved-debug-readtable*): new variables
	(commands1): bind "Reset" and ":re" to `debug-reset-io'

2001-06-21  Sam Steingold  <sds@gnu.org>

	SOCKET-STATUS now accepts SOCKET-SERVERs too
	and the direction of the checks can be specified
	* lispbibl.d (direction_t, if_does_not_exist_t, if_exists_t):
	 new enum types
	(check_direction, check_if_does_not_exist, check_if_exists,
	input_stream_p, output_stream_p): declare
	* pathname.d (check_direction, check_if_does_not_exist,
	check_if_exists): new global functions
	(OPEN): use them
	(open_file): use symbolic values for direction,
	if_exists and if_does_not_exist
	* stream.d (input_stream_p, output_stream_p): global functions now
	(READ_P, RO_P, WRITE_P, DIRECTION_FLAGS): new macros on direction_t
	(make_unbuffered_stream, make_buffered_stream, make_file_stream):
	 use them
	(socket_handle): new local function